add additional templates and paths

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h2>{% block title %}Home{% endblock %}</h2>
+<h2>{% block title %}Abas WebApp Admin{% endblock %}</h2>
 
 {% endblock %}
 {% block content %}
