--- a/templates/timesheet/lookup.html
+++ b/templates/timesheet/lookup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-
+{% block nav_timesheet %}active{% endblock %}
 {% block header %}
-<h2>{% block title %}Op Lookup{% endblock %}</h2>
+<div class="navbar-brand">{% block title %}Op Lookup{% endblock %}</div>
 
 {% endblock %}
 {% block content %}
