--- a/templates/admin/importCSV.html
+++ b/templates/admin/importCSV.html
@@ -1,10 +1,26 @@
 {% extends 'base.html' %}
-
+{% block nav_admin %}active{% endblock %}
 {% block header %}
 <h2>{% block title %}Abas Data Import from CSV{% endblock %}</h2>
 
 {% endblock %}
 {% block content %}
-
-
+<form method="post" enctype="multipart/form-data">
+    <div class="row mb-3">
+        <div class="input-group custom-file-button">
+            <label class="input-group-text" for="inputGroupFile">Select Labor Ops CSV File to Import</label>
+            <input type="file" class="form-control" accept=".csv" required name="csvFile">
+            <button type="submit" class="btn btn-primary" value="Import">Import Labor Ops Data</button>
+        </div>
+    </div>
+</form>
+<form method="post" enctype="multipart/form-data" action="{{ url_for('admin.importUserCSV') }}">
+    <div class="row mb-3">
+        <div class="input-group custom-file-button">
+            <label class="input-group-text" for="inputGroupFile">Select Employee CSV File to Import</label>
+            <input type="file" class="form-control" accept=".csv" required name="csvEFile">
+            <button type="submit" class="btn btn-primary" value="Import">Import Employee User Data</button>
+        </div>
+    </div>
+</form>
 {% endblock %}
