--- a/templates/base.html
+++ b/templates/base.html
@@ -2,28 +2,53 @@
 <head>
     <title>{% block title %}{% endblock %} - Abas WebApp</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="theme-color" content="#712cf9">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block head %}{%  endblock %}
 </head>
 
 <body>
-
-
-
-
-
-
-
-    <section class="content">
-        <header>
-          {% block header %}{% endblock %}
-        </header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a href="/" class="navbar-brand">
+          <img src="/static/images/abas.png" alt="Logo" width="32" height="32" class="d-inline-block align-text-top">
+          ABAS Webapp
+        </a>
+        <div class="navbar-text">
+          <header>
+            {% block header %}{% endblock %}
+          </header>
+        </div>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">            
+            <div class="navbar-nav ms-auto">              	
+              <a href="{{ url_for('home') }}" class="nav-item nav-link {% block nav_home %}{% endblock %}">Home</a>  
+              <a href="{{ url_for('timesheet.lookup') }}" class="nav-item nav-link {% block nav_timesheet %}{% endblock %}">Timesheet Lookup</a>  
+              {% if g.user %}
+              <a href="{{ url_for('admin.index') }}" class="nav-item nav-link {% block nav_admin %}{% endblock %}">Admin</a>  
+              <a href="{{ url_for('auth.logout') }}" class="nav-item nav-link">Logout</a>
+              {% else %}
+                <a href="/admin" class="nav-item nav-link">Admin</a>                 	
+              {% endif %}
+            </div>
+        </div>
+    </div>
+    
+    
+  </nav>
+  <div class="container-fluid min-vh-100" id="bodyContainer">    
+    <section class="content">        
         {% for message in get_flashed_messages() %}
           <div class="flash">{{ message }}</div>
         {% endfor %}
-        {% block content %}{% endblock %}
+        <div class="container d-flex align-items-center justify-content-center flex-column">
+          {% block content %}{% endblock %}
+        </div>  
     </section>
+  </div>  
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
