--- a/templates/timesheet/index.html
+++ b/templates/timesheet/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-
+{% block nav_timesheet %}active{% endblock %}
 {% block header %}
-<h2>{% block title %}Abas WebApp Timesheet{% endblock %}</h2>
+<div class="navbar-brand">{% block title %}Timesheet{% endblock %}</div>
 
 {% endblock %}
 {% block content %}
+
 
 
 {% endblock %}
