--- a/static/style.css
+++ b/static/style.css
@@ -23,11 +23,12 @@ body { margin: 0 0; background: white;}
 h1 { font-family: serif; color: #377ba8; margin: 1rem 0; }
 a { color: #377ba8; }
 hr { border: none; border-top: 1px solid lightgray; }
-nav { display: flex; align-items: center; padding: 0 0.5rem; }
+nav { display: flex; align-items: center; padding: 0 1rem; }
 nav h1 { flex: auto; margin: 0; }
 nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
 nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
 nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem;}
+.navbar-nav { font-size: larger;}
 .content { padding: 0 1rem 1rem;}
 /* .content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; } */
 /* .content > header h2 h4 { flex: auto; margin: 1rem 0; } */
