--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <head>
     <title>{% block title %}{% endblock %} - Abas WebApp</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -9,24 +10,22 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
         <a href="/" class="navbar-brand">
-          <img src="/static/images/abas.png" alt="Logo" width="32" height="32" class="d-inline-block align-text-top">
+          <img src="/static/images/abas.png" alt="Logo" width="24" height="24" class="d-inline-block align-text-center">
           ABAS Webapp
         </a>
         <div class="navbar-text">
-          <header>
             {% block header %}{% endblock %}
-          </header>
         </div>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">            
             <div class="navbar-nav ms-auto">              	
-              <a href="{{ url_for('home') }}" class="nav-item nav-link {% block nav_home %}{% endblock %}">Home</a>  
-              <a href="{{ url_for('timesheet.lookup') }}" class="nav-item nav-link {% block nav_timesheet %}{% endblock %}">Timesheet Lookup</a>  
+              <a href="{{ url_for('home') }}" class="nav-item nav-link {% block nav_home %}{% endblock %} .fs-4">Home</a>  
+              <a href="{{ url_for('timesheet.lookup') }}" class="nav-item nav-link {% block nav_timesheet %}{% endblock %}">Timesheet</a>  
               {% if g.user %}
               <a href="{{ url_for('admin.index') }}" class="nav-item nav-link {% block nav_admin %}{% endblock %}">Admin</a>  
               <a href="{{ url_for('auth.logout') }}" class="nav-item nav-link">Logout</a>
@@ -52,3 +51,4 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</html>
