--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     {% block head %}{%  endblock %}
 </head>
 
-<body>
+<body class="min-vh-100">
   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
         <a href="/" class="navbar-brand">
@@ -38,7 +38,7 @@
     
     
   </nav>
-  <div class="container-fluid min-vh-100" id="bodyContainer">    
+  <div class="container-fluid " id="bodyContainer">    
     <section class="content">        
         {% for message in get_flashed_messages() %}
           <div class="flash">{{ message }}</div>
