--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <title>{% block title %}{% endblock %} - Abas WebApp</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <meta name="theme-color" content="#712cf9">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block head %}{%  endblock %}
@@ -13,7 +14,7 @@
   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
         <a href="/" class="navbar-brand">
-          <img src="/static/images/abas.png" alt="Logo" width="24" height="24" class="d-inline-block align-text-center">
+          <!-- <img src="/static/images/abas.png" alt="Logo" width="24" height="24" class="d-inline-block align-text-center"> -->
           ABAS Webapp
         </a>
         <div class="navbar-text">
@@ -43,7 +44,7 @@
         {% for message in get_flashed_messages() %}
           <div class="flash">{{ message }}</div>
         {% endfor %}
-        <div class="container d-flex align-items-center justify-content-center flex-column">
+        <div class="container d-flex align-items-center justify-content-center flex-column w-auto">
           {% block content %}{% endblock %}
         </div>  
     </section>
