--- a/templates/timesheet/_ws.html
+++ b/templates/timesheet/_ws.html
@@ -1,30 +1,60 @@
-<p></p>
-{% for w in workslips %}
-    <div class="list-group">
-        <div class="list-group-item list-group-item-action" aria-current="true">
-          <div class="d-flex w-100 justify-content-between">
-              <h6 class="mb-1">{{ w.WSDescription }}</h6>
-              <small>{{ w.WSNumber }}</small>
-          </div>
-          <p class="mb-1">{{ w.OpNameExtended }}</p>
-          <small>{{ w.OpID }}</small>
+<p></p>    
+    <ul class="list-group bg-dark-custom" id="wsListgroup">
+      {% for w in workslips %}
+      <li class="list-group-item list-group-item-action" data-wsdesc="{{ w.WSDescription }}" data-wsnum="{{ w.WSNumber }}" data-opname="{{ w.OpNameExtended }}" data-opid="{{ w.OpID }}" data-project="{{ project }}" data-projectdesc="{{ projectDesc }}" data-wo="{{ wo }}" data-wodesc="{{ woDesc }}" >
+        <div class="d-flex w-100 justify-content-between">
+            <h6 class="mb-1">{{ w.WSDescription }}</h6>
+            <small>{{ w.WSNumber }}</small>
         </div>
-        <br />
-    </div>  
-    <!-- <div class="accordion accordion-flush" id="accordionWS">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{{ w.OpID }}" aria-expanded="false" aria-controls="{{ w.OpID }}">
-                <h6 class="mb-1">{{ w.WSDescription }}</h6>
-                <small>{{ w.WSNumber }}</small>
-            </button>
-          </h2>
-          <div id="{{ w.OpID }}" class="accordion-collapse collapse" data-bs-parent="#accordionWS">
-            <div class="accordion-body d-flex w-100 justify-content-between">
-                <p class="mb-1">{{ w.OpNameExtended }}</p>
-                <small>{{ w.OpID }}</small>
-            </div>
-          </div>
-        </div>
-    </div>   -->
-  {% endfor %}
+        <p class="mb-1">{{ w.OpNameExtended }}</p>
+        <small>{{ w.OpID }}</small>
+      </li>
+      {% endfor %}       
+    </ul>  
+    <!-- Modal -->
+<div class="modal fade" id="wsModal" tabindex="-1" aria-labelledby="wsBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-dark-custom">
+        <h5 class="modal-title" id="myModalLabel">Details</h5>
+        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button> -->
+      </div>
+      <div class="modal-body">
+        <p><span id="mProject"></span> - <span id="mProjectDesc"></span></p>
+        <p>WO<span id="mWO"></span> - <span id="mWODesc"></span></p>
+        <p>Op - <span id="mOpName"></span> (<small id="mOpName2"></small>)</p>
+        <p>OpCode - <span id="mOpID"></span></p>
+      </div>
+      <div class="modal-footer bg-dark-custom">
+
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+  $(document).ready(function() {
+      $('#wsListgroup .list-group-item').on('click', function() {
+          // Retrieve data attributes
+          var desc = $(this).data('wsdesc');
+          var num = $(this).data('wsnum');
+          var opid = $(this).data('opid');
+          var opname = $(this).data('opname');
+          var project = $(this).data('project');
+          var projectdesc = $(this).data('projectdesc');
+          var wo = $(this).data('wo');
+          var wodesc = $(this).data('wodesc');
+          // Set modal content with the retrieved data
+          $('#mProject').text(project);
+          $('#mProjectDesc').text(projectdesc);
+          $('#mWO').text(wo);
+          $('#mWODesc').text(wodesc);
+          $('#mOpName').text(opname);
+          $('#mOpName2').text(desc);
+          $('#mOpID').text(opid);
+          // Show the modal
+          $('#wsModal').modal('show');
+      });
+  });
+</script>
