add gitignore combined import and webapp into one project moved timesheet op lookup to new url to make room for timesheet creation moved db connetion string to config.py

--- a/templates/admin/results.html
+++ b/templates/admin/results.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block nav_admin %}active{% endblock %}
 {% block header %}
-<div class="navbar-brand">{% block title %}Data Import Results{% endblock %}</div>
+<div class="navbar-brand navbar-text">{% block title %}Data Import Results{% endblock %}</div>
 
 {% endblock %}
 {% block content %}
