--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block nav_admin %}active{% endblock %}
 {% block header %}
-<div class="navbar-brand">{% block title %}Admin Zone{% endblock %}</div>
+<div class="navbar-brand navbar-text">{% block title %}Admin Zone{% endblock %}</div>
 
 {% endblock %}
 {% block content %}
