--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,10 @@
 {% endblock %}
 {% block title %}Home{% endblock %}
 {% block nav_home %}active{% endblock %}
-{% block header %}{% endblock %}
+{% block header %}
+<div class="navbar-brand navbar-text">Abas WebApp</div>
+
+{% endblock %}
 {% block content %}
 
 
