--- a/templates/timesheet/index.html
+++ b/templates/timesheet/index.html
@@ -1,9 +1,23 @@
 {% extends 'base.html' %}
 {% block nav_timesheet %}active{% endblock %}
 {% block header %}
-<div class="navbar-brand navbar-text">{% block title %}Timesheet{% endblock %}</div>
+<div class="navbar-brand navbar-text">{% block title %}Timesheet Menu{% endblock %}</div>
 
 {% endblock %}
+{% block subheader %}
+<nav aria-label="breadcrumb" class="breadcrumb-bg">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{{ url_for('home') }}">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Timesheet</li>
+    </ol>
+</nav>
+<p></p>
+{% endblock %}
 {% block content %}
-    
+<div class="align-items-center justify-content-center text-center">
+    <p></p>
+    <p><a href="{{ url_for('timesheet.entry') }}" class="btn btn-abas btn-lg" role="button">Timesheet Entry</a></p>
+    <p></p>
+    <p><a href="{{ url_for('timesheet.lookup') }}" class="btn btn-abas btn-lg" role="button">Timesheet Operation Lookup</a></p>
+</div>
 {% endblock %} <!-- end content block -->
