--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,13 @@
   </div>  
   
   {% block script %} {% endblock %}
+  {% block footer %}
+  <footer class="bg-dark text-muted text-center py-3 mt-4 border-top">
+    <div class="container">
+      <p class="mb-0 small">&copy; 2025 Kasa Companies. All rights reserved.</p>
+    </div>
+  </footer>
+  {% endblock %}
 </body>
 
 </html>
