--- a/templates/timesheet/entry.html
+++ b/templates/timesheet/entry.html
@@ -20,7 +20,7 @@
         <!-- Card 1 -->
         <div class="col my-2">
             <div class="card bg-light border-dark " >
-                <div class="card-header text-center bg-abas fw-bold">03/31/2025 - Mon</div>
+                <div class="card-header text-center bg-abas font-weight-bold">03/31/2025 - Mon</div>
                 <div class="card-body">
                     <h5 class="card-title">Card 1 Title</h5>
                     <p class="card-text">Current day card. Some quick example text to build on the card title and make up the bulk of the card's content. Here is more text to make the card taller and taller.</p>
@@ -30,7 +30,7 @@
         <!-- Card 2 -->
         <div class="col my-2">
             <div class="card bg-light border-dark">
-                <div class="card-header text-center bg-dark text-light fw-bold">04/01/2025 - Tues</div>
+                <div class="card-header text-center bg-dark text-light font-weight-bold">04/01/2025 - Tues</div>
                 <div class="card-body">
                     <h5 class="card-title">Card 2 Title</h5>
                     <p class="card-text">Weekday card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -40,7 +40,7 @@
         <!-- Card 3 -->
         <div class="col my-2">
             <div class="card bg-light border-dark ">
-                <div class="card-header text-center bg-dark text-light fw-bold">04/02/2025 - Wed</div>
+                <div class="card-header text-center bg-dark text-light font-weight-bold">04/02/2025 - Wed</div>
                 <div class="card-body">
                     <h5 class="card-title">Card 3 Title</h5>
                     <p class="card-text">Weekday card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -50,7 +50,7 @@
         <!-- Card 4 -->
         <div class="col my-2">
             <div class="card bg-light border-dark " >
-                <div class="card-header text-center bg-warning fw-bold">04/03/2025 - Thurs</div>
+                <div class="card-header text-center bg-warning font-weight-bold">04/03/2025 - Thurs</div>
                 <div class="card-body">
                     <h5 class="card-title">Card 4 Title</h5>
                     <p class="card-text">Holiday card. quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -60,7 +60,7 @@
         <!-- Card 5 -->
         <div class="col my-2">
             <div class="card bg-light border-dark ">
-                <div class="card-header text-center bg-dark text-light fw-bold">04/04/2025 - Fri</div>
+                <div class="card-header text-center bg-dark text-light font-weight-bold">04/04/2025 - Fri</div>
                 <div class="card-body">
                     <h5 class="card-title">Card 5 Title</h5>
                     <p class="card-text">Weekday card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -70,7 +70,7 @@
         <!-- Card 6 -->
         <div class="col my-2">
             <div class="card bg-light border-dark ">
-                <div class="card-header text-center bg-secondary text-light fw-bold">04/05/2025 - Sat</div>
+                <div class="card-header text-center bg-secondary text-light font-weight-bold">04/05/2025 - Sat</div>
                 <div class="card-body">
                     <h5 class="card-title">Card 6 Title</h5>
                     <p class="card-text">Weekend day card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -80,7 +80,7 @@
         <!-- Card 7 -->
         <div class="col my-2">
             <div class="card bg-light border-dark ">
-                <div class="card-header text-center bg-secondary text-light fw-bold">04/06/2025 - Sun</div>
+                <div class="card-header text-center bg-secondary text-light font-weight-bold">04/06/2025 - Sun</div>
                 <div class="card-body">
                     <h5 class="card-title">Card 7 Title</h5>
                     <p class="card-text">Weekend day card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
