add abasID lookup to entry page add css to support abasID lookup

--- a/static/style.css
+++ b/static/style.css
@@ -206,3 +206,8 @@ header a { margin: 1rem 0.5rem; } */
     margin: 0 auto; /* Center the container horizontally */
     padding: 15px; /* Optional: Add some padding for better spacing */
   }
+
+  .abasid-lookup {
+    max-width: 400px; /* Set the maximum width for the input group */
+    margin: 0 auto; /* Center the input group horizontally */
+  }
