--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -7,6 +7,6 @@
 {% block content %}
 <div class="align-items-center justify-content-center">
     <p></p>
-    <p><a href="{{ url_for('admin.importCSV') }}" class="btn btn-info" role="button">Import CSV Data</a></p>
+    <p><a href="{{ url_for('admin.importCSV') }}" class="btn btn-abas btn-block btn-max-width-400" role="button">Import CSV Data</a></p>
 </div>
 {% endblock %}
